refactor: 열차 조회 service계층 로직 분리 리팩토링 (goorm-sudo/raillo-backend#5)