@@ -43,6 +43,8 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class TrainScheduleService {
 
+	private static final double STANDING_RATIO = 0.15; // 15%, TODO: 열차 종류별 다른 % 적용
+
 	private final TrainScheduleRepository trainScheduleRepository;
 	private final TrainScheduleRepositoryCustom trainScheduleRepositoryCustom;
 	private final SeatReservationRepository seatReservationRepository;
@@ -100,63 +102,54 @@ public class TrainScheduleService {
 	}
 
 	/**
-	 * 통합 열차 검색 (메인 검색)
-	 * 1. 검색 조건으로 기본 열차 정보 조회 (페이징)
+	 * 통합 열차 조회 (메인 검색)
+	 * 1. 조회 조건으로 기본 열차 정보 조회 (페이징)
 	 * 2. 구간별 요금 정보 조회
 	 * 3. 각 열차별 좌석 상태 계산 및 응답 생성
-	 * 4. 최종 검색 결과 반환
+	 * 4. 최종 조회 결과 반환
 	 */
 	public TrainSearchPageResponse searchTrains(TrainSearchRequest request, Pageable pageable) {
-		log.info("열차 검색 시작: {} -> {}, {}, 승객: {}명, 출발 시간: {}시 이후",
+		log.info("열차 조회 시작: {} -> {}, {}, 승객: {}명, 출발 시간: {}시 이후",
 			request.departureStationId(), request.arrivalStationId(),
 			request.operationDate(), request.passengerCount(), request.departureHour());
 
-		try {
-			// 1.  검색 조건에 맞는 기본 열차 정보 조회
-			LocalTime departureTimeFrom = request.getDepartureTimeFilter();
+		// 1.  조회 조건에 맞는 기본 열차 정보 조회
+		Page<TrainBasicInfo> trainPage = findTrainBasicInfo(request, pageable);
 
-			Page<TrainBasicInfo> trainPage = trainScheduleRepositoryCustom.findTrainBasicInfo(
-				request.departureStationId(), request.arrivalStationId(), request.operationDate(), departureTimeFrom,
-				pageable);
+		// 2. 구간별 요금 정보 조회 (일반실/특실 요금)
+		StationFare fare = findStationFare(request.departureStationId(), request.arrivalStationId());
 
-			// 검색 결과 없음 예외 처리
-			if (trainPage.isEmpty()) {
-				log.warn("열차 조회 결과 없음: {}역 -> {}역, {}, {}시 이후",
-					request.departureStationId(), request.arrivalStationId(), request.operationDate(),
-					request.departureHour());
-				throw new BusinessException(TrainErrorCode.NO_OPERATION_ON_DATE,
-					String.format("%s %시 이후 운행하는 열차가 없습니다.", request.operationDate(), request.departureHour()));
-			}
+		// 3. 각 열차별 좌석 상태 계산 및 응답 생성
+		List<TrainSearchResponse> trainSearchResults = processTrainSearchResults(trainPage.getContent(), fare, request);
 
-			// 2. 구간별 요금 정보 조회 (일반실/특실 요금)
-			StationFare fare = findStationFare(request.departureStationId(), request.arrivalStationId());
+		return createTrainSearchPageResponse(trainSearchResults, trainPage);
 
-			// 3. 각 열차별 좌석 상태 계산 및 응답 생성
-			List<TrainSearchResponse> trainSearchResults = processTrainSearchResults(trainPage.getContent(), fare,
-				request);
-
-			if (trainSearchResults.isEmpty()) {
-				log.warn("처리 가능한 열차 없음");
-				throw new BusinessException(TrainErrorCode.NO_SEARCH_RESULTS);
-			}
-
-			// 4. 최종 응답 생성 및 반환
-			log.info("열차 조회 완료: 전체 {}건 중 {}건 처리 성공",
-				trainPage.getContent().size(), trainSearchResults.size());
-
-			return TrainSearchPageResponse.of(trainSearchResults, trainPage.getNumber(), trainPage.getSize(),
-				trainPage.getTotalElements(), trainPage.getTotalPages(), trainPage.hasNext(), trainPage.hasPrevious());
-		} catch (BusinessException e) {
-			throw e;
-		} catch (Exception e) {
-			log.error("열차 검색 중 시스템 오류 발생", e);
-			throw new BusinessException(TrainErrorCode.TRAIN_SYSTEM_ERROR, e);
-		}
 	}
 
 	// ============================================
-	// Private Helper Methods
+	// 메인 열차 조회 플로우
 	// ============================================
+
+	/**
+	 * 기본 열차 정보 조회
+	 */
+	private Page<TrainBasicInfo> findTrainBasicInfo(TrainSearchRequest request, Pageable pageable) {
+		LocalTime departureTimeFrom = request.getDepartureTimeFilter();
+
+		Page<TrainBasicInfo> trainPage = trainScheduleRepositoryCustom.findTrainBasicInfo(
+			request.departureStationId(), request.arrivalStationId(), request.operationDate(), departureTimeFrom,
+			pageable);
+
+		if (trainPage.isEmpty()) {
+			log.warn("열차 조회 결과 없음: {}역 -> {}역, {}, {}시 이후",
+				request.departureStationId(), request.arrivalStationId(), request.operationDate(),
+				request.departureHour());
+			throw new BusinessException(TrainErrorCode.NO_OPERATION_ON_DATE,
+				String.format("%s %시 이후 운행하는 열차가 없습니다.", request.operationDate(), request.departureHour()));
+		}
+
+		return trainPage;
+	}
 
 	/**
 	 * 구간별 요금 정보 조회
@@ -171,31 +164,59 @@ public class TrainScheduleService {
 	}
 
 	/**
-	 * 열차 검색 결과 일괄 처리 (각 열차별로 좌석 상태 계산)
+	 * 열차 조회 결과 일괄 처리 (각 열차별로 좌석 상태 계산)
 	 * @param trainInfos 기본 열차 정보 리스트
 	 * @param fare 구간 요금 정보
-	 * @param request 검색 요청 정보
-	 * @return 좌석 상태가 포함된 열차 검색 결과
+	 * @param request 조회 요청 정보
+	 * @return 좌석 상태가 포함된 열차 조회 결과
 	 */
 	private List<TrainSearchResponse> processTrainSearchResults(List<TrainBasicInfo> trainInfos, StationFare fare,
 		TrainSearchRequest request) {
-		return trainInfos.stream()
+
+		List<TrainSearchResponse> results = trainInfos.stream()
 			.map(trainInfo -> processIndividualTrain(trainInfo, fare, request)) // 각 개별 열차 처리
 			.filter(Objects::nonNull) // 처리 실패한 열차 제외
-			.collect(Collectors.toList());
+			.toList();
+
+		if (results.isEmpty()) {
+			log.warn("처리 가능한 열차 없음");
+			throw new BusinessException(TrainErrorCode.NO_SEARCH_RESULTS);
+		}
+
+		log.info("열차 조회 완료: 전체 {}건 중 {}건 처리 성공", trainInfos.size(), results.size());
+		return results;
 	}
+
+	/**
+	 * 열차 조회 응답 생성
+	 */
+	private TrainSearchPageResponse createTrainSearchPageResponse(List<TrainSearchResponse> trainSearchResults,
+		Page<TrainBasicInfo> trainPage) {
+		return TrainSearchPageResponse.of(
+			trainSearchResults,
+			trainPage.getNumber(),
+			trainPage.getSize(),
+			trainPage.getTotalElements(),
+			trainPage.getTotalPages(),
+			trainPage.hasNext(),
+			trainPage.hasPrevious()
+		);
+	}
+
+	// ============================================
+	// 개별 열차 처리 메소드
+	// ============================================
 
 	/**
 	 * 개별 열차 처리 (좌석 상태 계산 + 응답 생성)
 	 * @param trainInfo 기본 열차 정보
 	 * @param fare 구간 요금 정보
-	 * @param request 검색 요청 정보
-	 * @return 처리된 열차 검색 응답 (실패시 null)
+	 * @param request 조회 요청 정보
+	 * @return 처리된 열차 조회 응답 (실패시 null)
 	 */
 	private TrainSearchResponse processIndividualTrain(TrainBasicInfo trainInfo, StationFare fare,
 		TrainSearchRequest request) {
 		try {
-			// 이 열차의 구간별 좌석 상태 계산
 			SectionSeatStatus sectionStatus = calculateSectionSeatStatus(
 				trainInfo.trainScheduleId(),
 				request.departureStationId(),
@@ -205,49 +226,53 @@ public class TrainScheduleService {
 			return createTrainSearchResponse(trainInfo, sectionStatus, fare, request.passengerCount());
 		} catch (Exception e) {
 			log.warn("열차 {} 처리 실패: {}", trainInfo.trainNumber(), e.getMessage());
-			return null; // 실패한 열차는 null 반환
+			return null;
 		}
 	}
 
 	/**
-	 * 열차 검색 응답 생성
+	 * 열차 조회 응답 생성
 	 * @param trainInfo 기본 열차 정보
 	 * @param sectionStatus 계산된 좌석 상태
 	 * @param fare 구간 요금 정보
 	 * @param passengerCount 승객 수
-	 * @return 완성된 열차 검색 응답
+	 * @return 완성된 열차 조회 응답
 	 */
 	private TrainSearchResponse createTrainSearchResponse(TrainBasicInfo trainInfo, SectionSeatStatus sectionStatus,
 		StationFare fare, int passengerCount) {
-		try {
-			// 1. 좌석 타입별 정보 생성 (일반실 / 특실)
-			SeatTypeInfo standardSeatInfo = SeatTypeInfo.create(sectionStatus.standardAvailable(),
-				sectionStatus.standardTotal(), fare.getStandardFare(), passengerCount, "일반실");
-			SeatTypeInfo firstClassSeatInfo = SeatTypeInfo.create(sectionStatus.firstClassAvailable(),
-				sectionStatus.firstClassTotal(), fare.getFirstClassFare(), passengerCount, "특실");
 
-			// 2. 입석 정보 생성
-			StandingTypeInfo standingInfo = createStandingInfoIfNeeded(sectionStatus, fare);
+		// 1. 좌석 타입별 정보 생성 (일반실 / 특실)
+		SeatTypeInfo standardSeatInfo = SeatTypeInfo.create(
+			sectionStatus.standardAvailable(),
+			sectionStatus.standardTotal(),
+			fare.getStandardFare(),
+			passengerCount,
+			"일반실"
+		);
+		SeatTypeInfo firstClassSeatInfo = SeatTypeInfo.create(
+			sectionStatus.firstClassAvailable(),
+			sectionStatus.firstClassTotal(),
+			fare.getFirstClassFare(),
+			passengerCount,
+			"특실"
+		);
 
-			// 3. 전체 예약 가능 상태 결정 (여유, 좌석 부족, 입석+좌석, 매진 임박, 매진 등)
-			SeatAvailabilityStatus overallStatus = determineOverallStatus(sectionStatus);
+		// 2. 입석 정보 생성
+		StandingTypeInfo standingInfo = createStandingInfoIfNeeded(sectionStatus, fare);
 
-			// 4. 응답 객체 생성
-			return TrainSearchResponse.of(
-				String.format("%03d", trainInfo.trainNumber()),  // 열차번호 3자리 포맷
-				trainInfo.trainName(),                           // 열차명
-				trainInfo.departureTime(),                       // 출발시간
-				trainInfo.arrivalTime(),                         // 도착시간
-				standardSeatInfo,                               // 일반실 정보
-				firstClassSeatInfo,                             // 특실 정보
-				standingInfo,                                   // 입석 정보 (있으면 포함, 없으면 null)
-				overallStatus                                   // 전체 상태
-			);
-		} catch (Exception e) {
-			log.error("열차 응답 생성 중 오류: 열차번호={}", trainInfo.trainNumber(), e);
-			throw new BusinessException(TrainErrorCode.TRAIN_SYSTEM_ERROR,
-				"열차 정보 생성 중 오류: " + trainInfo.trainNumber());
-		}
+		// 3. 전체 예약 가능 상태 결정 (여유, 좌석 부족, 입석+좌석, 매진 임박, 매진 등)
+		SeatAvailabilityStatus overallStatus = determineOverallStatus(sectionStatus);
+
+		return TrainSearchResponse.of(
+			String.format("%03d", trainInfo.trainNumber()),  // 열차번호 3자리 포맷
+			trainInfo.trainName(),                           // 열차명
+			trainInfo.departureTime(),                       // 출발시간
+			trainInfo.arrivalTime(),                         // 도착시간
+			standardSeatInfo,                               // 일반실 정보
+			firstClassSeatInfo,                             // 특실 정보
+			standingInfo,                                   // 입석 정보 (있으면 포함, 없으면 null)
+			overallStatus                                   // 전체 상태
+		);
 	}
 
 	/**
@@ -264,35 +289,38 @@ public class TrainScheduleService {
 		return null;
 	}
 
+	// ============================================
+	// 좌석 계산 및 상태 판정 메소드
+	// ============================================
+
 	/**
 	 * 구간별 좌석 상태 종합 계산
 	 */
 	private SectionSeatStatus calculateSectionSeatStatus(Long trainScheduleId, Long departureStationId,
 		Long arrivalStationId, int passengerCount) {
-		try {
-			List<SeatReservationInfo> overlappingReservations = seatReservationRepository.findOverlappingReservations(
-				trainScheduleId, departureStationId, arrivalStationId);
-			Map<CarType, Integer> totalSeats = trainScheduleRepositoryCustom.findTotalSeatsByCarType(trainScheduleId);
 
-			SeatCalculationResult seatResult = calculateAvailableSeats(totalSeats, overlappingReservations);
-			StandingCalculationResult standingResult = calculateStandingAvailability(trainScheduleId,
-				departureStationId, arrivalStationId, passengerCount);
+		// 겹치는 예약 정보 조회
+		List<SeatReservationInfo> overlappingReservations = seatReservationRepository.findOverlappingReservations(
+			trainScheduleId, departureStationId, arrivalStationId);
 
-			boolean canReserveStandard = seatResult.standardAvailable() >= passengerCount;
-			boolean canReserveFirstClass = seatResult.firstClassAvailable() >= passengerCount;
-			boolean canReserveStanding = standingResult.canReserveStanding();
+		// 열차 별 좌석 수 조회
+		Map<CarType, Integer> totalSeats = trainScheduleRepositoryCustom.findTotalSeatsByCarType(trainScheduleId);
 
-			return SectionSeatStatus.of(seatResult.standardAvailable(), seatResult.standardTotal(),
-				seatResult.firstClassAvailable(), seatResult.firstClassTotal(),
-				canReserveStandard, canReserveFirstClass,
-				standingResult.standingAvailable(), standingResult.maxAdditionalStanding(),
-				canReserveStanding, standingResult.maxOccupancyInRoute());
-		} catch (BusinessException e) {
-			throw e;
-		} catch (Exception e) {
-			log.error("좌석 상태 계산 중 오류: trainScheduleId={}", trainScheduleId, e);
-			throw new BusinessException(TrainErrorCode.TRAIN_SYSTEM_ERROR, "좌석 상태 계산 중 오류가 발생했습니다.");
-		}
+		// 좌석 계산 (일반 좌석, 입석)
+		SeatCalculationResult seatResult = calculateAvailableSeats(totalSeats, overlappingReservations);
+		StandingCalculationResult standingResult = calculateStandingAvailability(trainScheduleId, passengerCount);
+
+		boolean canReserveStandard = seatResult.standardAvailable() >= passengerCount;
+		boolean canReserveFirstClass = seatResult.firstClassAvailable() >= passengerCount;
+		boolean canReserveStanding = standingResult.canReserveStanding();
+
+		return SectionSeatStatus.of(
+			seatResult.standardAvailable(), seatResult.standardTotal(),
+			seatResult.firstClassAvailable(), seatResult.firstClassTotal(),
+			canReserveStandard, canReserveFirstClass,
+			standingResult.standingAvailable(), standingResult.maxAdditionalStanding(),
+			canReserveStanding, standingResult.maxOccupancyInRoute()
+		);
 	}
 
 	/**
@@ -300,38 +328,41 @@ public class TrainScheduleService {
 	 */
 	private SeatCalculationResult calculateAvailableSeats(Map<CarType, Integer> totalSeats,
 		List<SeatReservationInfo> overlappingReservations) {
+		// 총 좌석 수
 		int standardTotal = totalSeats.getOrDefault(CarType.STANDARD, 0);
 		int firstClassTotal = totalSeats.getOrDefault(CarType.FIRST_CLASS, 0);
 
+		// 예약된 좌석 수 계산
 		Map<CarType, Long> occupiedSeats = overlappingReservations.stream()
 			.collect(Collectors.groupingBy(SeatReservationInfo::carType, Collectors.counting()));
 
 		int standardOccupied = occupiedSeats.getOrDefault(CarType.STANDARD, 0L).intValue();
 		int firstClassOccupied = occupiedSeats.getOrDefault(CarType.FIRST_CLASS, 0L).intValue();
 
-		return new SeatCalculationResult(Math.max(0, standardTotal - standardOccupied), standardTotal,
-			Math.max(0, firstClassTotal - firstClassOccupied), firstClassTotal);
+		return new SeatCalculationResult(
+			Math.max(0, standardTotal - standardOccupied), standardTotal,
+			Math.max(0, firstClassTotal - firstClassOccupied), firstClassTotal
+		);
 	}
 
 	/**
 	 * 입석 가능 여부 및 수량 계산
 	 */
-	private StandingCalculationResult calculateStandingAvailability(Long trainScheduleId, Long departureStationId,
-		Long arrivalStationId, int passengerCount) {
+	private StandingCalculationResult calculateStandingAvailability(Long trainScheduleId, int passengerCount) {
 		try {
-			int maxTrainCapacity = trainScheduleRepositoryCustom.findMaxCapacityByTrainScheduleId(trainScheduleId);
+			int totalSeats = trainScheduleRepositoryCustom.findTotalSeatsByTrainScheduleId(trainScheduleId);
 
-			if (maxTrainCapacity == 0) {
-				log.warn("열차 정보 없음: trainScheduleId={}", trainScheduleId);
-				return new StandingCalculationResult(false, 0, false, 0);
-			}
+			int maxStandingCapacity = (int)(totalSeats * STANDING_RATIO);
 
-			// 간단한 입석 계산 로직
-			boolean standingAvailable = true;
-			int maxAdditionalStanding = 50; // 임시값
+			// 현재 구간에서 예약된 입석 수 조회, 추가 입석 가능 인원 수 계산 TODO: 실제 구현 필요
+			int currentStandingReservations = 0; // 임시값
+			int maxAdditionalStanding = Math.max(0, maxStandingCapacity - currentStandingReservations);
+
+			boolean standingAvailable = maxAdditionalStanding > 0;
 			boolean canReserveStanding = maxAdditionalStanding >= passengerCount;
 
-			return new StandingCalculationResult(standingAvailable, maxAdditionalStanding, canReserveStanding, 0);
+			return new StandingCalculationResult(standingAvailable, maxAdditionalStanding, canReserveStanding,
+				currentStandingReservations);
 		} catch (Exception e) {
 			log.warn("입석 계산 중 오류: trainScheduleId={}", trainScheduleId, e);
 			return new StandingCalculationResult(false, 0, false, 0);
@@ -367,11 +398,15 @@ public class TrainScheduleService {
 	// Service Layer 전용 내부 Records
 	// ============================================
 
-	private record SeatCalculationResult(int standardAvailable, int standardTotal, int firstClassAvailable,
-										 int firstClassTotal) {
+	private record SeatCalculationResult(
+		int standardAvailable, int standardTotal,
+		int firstClassAvailable, int firstClassTotal
+	) {
 	}
 
-	private record StandingCalculationResult(boolean standingAvailable, int maxAdditionalStanding,
-											 boolean canReserveStanding, int maxOccupancyInRoute) {
+	private record StandingCalculationResult(
+		boolean standingAvailable, int maxAdditionalStanding,
+		boolean canReserveStanding, int maxOccupancyInRoute
+	) {
 	}
 }
